team pic cutoff fix

--- a/static/assets/css/overwrite.css
+++ b/static/assets/css/overwrite.css
@@ -315,9 +315,11 @@ section .game:first-of-type{
 }
 
 .teampic{
-    float: center;
+    display: block;
     max-width: 480px;
-    width: 80%
+    width: 95%;
+    margin: 5%;
+    
 }
 
 .cleardiv{
